register flight reservation

--- a/frontend/topgun-web/src/components/textInputField/TextInputField.css
+++ b/frontend/topgun-web/src/components/textInputField/TextInputField.css
@@ -11,9 +11,9 @@
 }
 
 .textInputField input{
-    background-color: rgb(202, 203, 204);
+    background-color: rgb(247,230,196);
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.06);
-    width: 100%;
+    width: 50%;
     border: none;
     font-size: 24px;
     padding: 24px;
