--- a/frontend/topgun-web/src/App.css
+++ b/frontend/topgun-web/src/App.css
@@ -9,3 +9,10 @@
 .homeLogo{
   width: 60%;
 }
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
