--- a/frontend/topgun-web/src/components/linkButton/LinkButton.css
+++ b/frontend/topgun-web/src/components/linkButton/LinkButton.css
@@ -3,11 +3,15 @@
     border-radius: 10px;
     font-weight: 700;
     font-size: 18px;
-    padding: 2%;
     border: none;
     cursor: pointer;
     color: rgb(247,230,196);
-    margin: 20px 15px;
+    margin: 20px 30px;
+    width: 100%;
+    height: 100%;
+
+    
+    
 
    
 
