--- a/frontend/topgun-web/src/components/SearchFlight/SearchFlight.css
+++ b/frontend/topgun-web/src/components/SearchFlight/SearchFlight.css
@@ -1,54 +1,55 @@
-.mainSearchUser{
+.mainSearchFlight{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.mainSearchUser button{
+.mainSearchFlight button{
     background-color: rgb(247,230,196);
     width: 20%;
     margin-top: 2%;
-    margin-bottom:2% ;
+    margin-bottom: 2%;
     padding: 1%;
     color:rgba(53, 65, 50, 0.726);
     font-weight: bold;
 }
 
-.mainSearchUser input{
+.mainSearchFlight input{
     width: 20%;
     padding: 1%;
 }
 
 
-.userByEmail{
+.flightById{
     background-color: rgb(247,230,196);
     color:rgba(53, 65, 50, 0.726);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 10px 100px / 120px 100px;
-    width: 60%;
-    font-weight: 1000;
+    width: 250%;
+    font-weight: bold;
     margin-bottom:2% ;
     margin-top:2% ;
     list-style: none;
+    padding-left: 5%;
 }
 
-.searchUser{
+.searchFlight{
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.searchUser h3{
+.searchFlight h3{
     font-size: 150%;
     margin-bottom: 0;
 }
 
-.userOutputSection{
+.flightOutputSection{
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
 
-.userOutputSection p{
+.flightOutputSection p{
     padding: 2%;
 }
