--- a/frontend/topgun-web/src/App.css
+++ b/frontend/topgun-web/src/App.css
@@ -14,6 +14,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 1%;
 }
