--- a/frontend/topgun-web/src/App.css
+++ b/frontend/topgun-web/src/App.css
@@ -1,19 +1,80 @@
+
+
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-color: rgb(96 108 93);
+  background-color: #F6F1F1;
+  height: 100vh;
+  width: 200vh;
 }
 
-.homeLogo{
-  width: 60%;
+.homeMain{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttons{
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
   margin: 1%;
 }
+
+.homeFooter {
+  background-color: #146C94;
+  width: calc(100% + 4rem);
+  height: 7vh;
+  margin-top: 5%;
+  margin-left: -2rem;
+  margin-right: -2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  flex-direction: column;
+  color: #F6F1F1;
+  position: sticky;
+  bottom: -1vh;
+}
+
+
+.homeLinks{
+  margin-top: -1rem;
+  display: flex;
+  flex-direction: row;
+  
+}
+
+.homeLinks a {
+  color: #F6F1F1;
+  margin: 2%;
+}
+
+.homeLogo {
+  
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.homeLogo h1{
+  font-size: 550%;
+  color: #146C94;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-bottom: 0;
+}
+
+.homeLogo p{
+  font-size: 150%;
+  margin-top: 0;
+  color: #AFD3E2;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+
+
+
+
